--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
 		"vite": "^4.0.0",
 		"vitest": "^0.25.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"kute": "^1.0.0"
+	}
 }
